# BagItBetter

./: LICENSE  README.md
backend/: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt
backend/app/db/: db.py  session_manager.py
backend/app/models/: database_schema.py
backend/app/routers/: compare_product.py  user.py
backend/app/schema/: product_review.py  product_schema.py  user.py
backend/app/services/: amazon_product_extractor.py  crawling_service.py  llm_service.py
backend/app/utils/: celery_client.py  logging_config.py  product_formatter.py  prompt.py  security.py
client/: package-lock.json  package.json
client/app/: layout.tsx  page.tsx
